--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
+        "@inertiajs/svelte": "^1.0.2",
+        "@sveltejs/vite-plugin-svelte": "^2.0.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "svelte": "^3.55.1",
         "vite": "^4.0.0"
     }
 }
