--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "devDependencies": {
         "@inertiajs/svelte": "^1.0.2",
         "@sveltejs/vite-plugin-svelte": "^2.0.2",
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.21",
         "svelte": "^3.55.1",
+        "tailwindcss": "^3.2.7",
         "vite": "^4.0.0"
     }
 }
