--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     },
     "devDependencies": {
         "@inertiajs/svelte": "^1.0.2",
+        "@popperjs/core": "^2.11.6",
         "@sveltejs/vite-plugin-svelte": "^2.0.2",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
+        "sass": "^1.58.3",
         "svelte": "^3.55.1",
         "vite": "^4.0.0"
     }
