--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.21",
+        "prettier": "^2.8.4",
+        "prettier-plugin-svelte": "^2.9.0",
+        "prettier-plugin-tailwindcss": "^0.2.3",
         "svelte": "^3.55.1",
         "tailwindcss": "^3.2.7",
         "vite": "^4.0.0"
