--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
         "@inertiajs/svelte": "^1.0.2",
         "@popperjs/core": "^2.11.6",
         "@sveltejs/vite-plugin-svelte": "^2.0.2",
-        "@tabler/core": "1.0.0-beta17",
-        "autosize": "^5.0.2",
+        "@tabler/core": "github:tabler/tabler#dev",
+        "autosize": "^6.0.1",
         "axios": "^1.3.3",
         "bootstrap": "^5.2.3",
         "imask": "^6.4.3",
         "laravel-vite-plugin": "^0.7.4",
         "sass": "^1.58.3",
         "svelte": "^3.55.1",
-        "vite": "^4.1.3"
+        "vite": "^4.1.4"
     }
 }
